--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,33 +1,6 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
-$show-home-image: true;
-$home-image: url(../img/background2.jpg);
-$background-opacity: 0.8;
+@import "_config.scss";
+@import "_menu.scss";
 
-@mixin easeOut {
-    transition: color 1s ease-out;
-}
-
-@mixin background {
-    @if $show-home-image {
-        &#bg-img {
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;
-        
-            &:after {
-                content: '';
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 100%;
-                height: 100%;
-                z-index: -1;
-                background: rgba($primary-color, $background-opacity);
-            }
-        }
-    }
-}
 
 * {
     box-sizing: border-box;
