mevu overlay responsiveness & media queries

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: #444;
-$secondary-color: #eece1a;
+$secondary-color: #bffa73;
 $show-home-image: true;
 $home-image: url(../img/background2.jpg);
 $background-opacity: 0.8;
@@ -32,3 +32,29 @@ $background-opacity: 0.8;
         }
     }
 }
+
+////// Menu mediaQuery ///////
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and  (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXl {
+    @media screen and (min-width: 1171px) {
+        @content;
+    }
+}
+
