--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,10 @@
-$primary-color: rgb(90, 90, 90);
-$secondary-color: #edfc66;
+$primary-color: #444;
+$secondary-color: #c4ba3a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.8;
+
+
 
 @mixin easeOut {
     transition: all 1s ease-out;
@@ -33,6 +35,19 @@ $background-opacity: 0.8;
         }
     }
 }
+
+
+
+/////// Set TextColor function ///////
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    } @else {
+        @return #fff;
+    }
+}
+
+
 
 ////// Menu mediaQuery ///////
 @mixin mediaSm {
